# openfabrictask

./: Sciencebot.py  intent.json  main.py  model.py  pyproject.toml  train.pth  utils.py
